Memperbaiki InputUtilities.cls() - David